--- a/stm32f429_ugreen_dab.ioc
+++ b/stm32f429_ugreen_dab.ioc
@@ -1,32 +1,86 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.MEMTOMEM.0.Direction=DMA_MEMORY_TO_MEMORY
+Dma.MEMTOMEM.0.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.MEMTOMEM.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.MEMTOMEM.0.Instance=DMA2_Stream0
+Dma.MEMTOMEM.0.MemBurst=DMA_MBURST_SINGLE
+Dma.MEMTOMEM.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.MEMTOMEM.0.MemInc=DMA_MINC_ENABLE
+Dma.MEMTOMEM.0.Mode=DMA_NORMAL
+Dma.MEMTOMEM.0.PeriphBurst=DMA_PBURST_SINGLE
+Dma.MEMTOMEM.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.MEMTOMEM.0.PeriphInc=DMA_PINC_ENABLE
+Dma.MEMTOMEM.0.Priority=DMA_PRIORITY_HIGH
+Dma.MEMTOMEM.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.Request0=MEMTOMEM
+Dma.RequestsNb=1
+FMC.CASLatency1=FMC_SDRAM_CAS_LATENCY_3
+FMC.ExitSelfRefreshDelay1=7
+FMC.IPParameters=CASLatency1,SDClockPeriod1,SDClockPeriod2,ReadBurst1,ReadPipeDelay1,ReadPipeDelay2,LoadToActiveDelay1,ExitSelfRefreshDelay1,SelfRefreshTime1,RowCycleDelay1,RowCycleDelay2,WriteRecoveryTime1,RPDelay1,RPDelay2,RCDDelay1
+FMC.LoadToActiveDelay1=2
+FMC.RCDDelay1=2
+FMC.RPDelay1=2
+FMC.RPDelay2=2
+FMC.ReadBurst1=FMC_SDRAM_RBURST_DISABLE
+FMC.ReadPipeDelay1=FMC_SDRAM_RPIPE_DELAY_1
+FMC.ReadPipeDelay2=FMC_SDRAM_RPIPE_DELAY_1
+FMC.RowCycleDelay1=7
+FMC.RowCycleDelay2=7
+FMC.SDClockPeriod1=FMC_SDRAM_CLOCK_PERIOD_2
+FMC.SDClockPeriod2=FMC_SDRAM_CLOCK_PERIOD_2
+FMC.SelfRefreshTime1=4
+FMC.WriteRecoveryTime1=3
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
+LTDC.ActiveH=320
+LTDC.ActiveW=240
+LTDC.Alpha_L0=255
+LTDC.BlendingFactor1_L0=LTDC_BLENDING_FACTOR1_PAxCA
+LTDC.BlendingFactor2_L0=LTDC_BLENDING_FACTOR2_PAxCA
+LTDC.FBStartAdress_L0=0xD0000000
+LTDC.HBP=20
+LTDC.HFP=10
+LTDC.HSync=10
+LTDC.IPParameters=ActiveW,ActiveH,Layers,WindowX1_L0,WindowY1_L0,PixelFormat_L0,Alpha_L0,BlendingFactor1_L0,BlendingFactor2_L0,FBStartAdress_L0,ImageWidth_L0,ImageHeight_L0,HSync,HBP,HFP,VSync,VFP
+LTDC.ImageHeight_L0=320
+LTDC.ImageWidth_L0=240
+LTDC.Layers=0
+LTDC.PixelFormat_L0=LTDC_PIXEL_FORMAT_ARGB8888
+LTDC.VFP=4
+LTDC.VSync=2
+LTDC.WindowX1_L0=240
+LTDC.WindowY1_L0=320
 Mcu.Family=STM32F4
-Mcu.IP0=FREERTOS
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=RTC
-Mcu.IP4=SPI3
-Mcu.IP5=SPI5
-Mcu.IP6=SYS
-Mcu.IP7=USB_DEVICE
-Mcu.IP8=USB_OTG_HS
-Mcu.IPNb=9
+Mcu.IP0=DMA
+Mcu.IP1=DMA2D
+Mcu.IP10=SYS
+Mcu.IP11=USB_DEVICE
+Mcu.IP12=USB_OTG_HS
+Mcu.IP2=FMC
+Mcu.IP3=FREERTOS
+Mcu.IP4=LTDC
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=RTC
+Mcu.IP8=SPI3
+Mcu.IP9=SPI5
+Mcu.IPNb=13
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14/OSC32_IN
 Mcu.Pin1=PC15/OSC32_OUT
 Mcu.Pin10=PF8
 Mcu.Pin100=PE1
-Mcu.Pin101=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin102=VP_RTC_VS_RTC_Activate
-Mcu.Pin103=VP_RTC_VS_RTC_Calendar
-Mcu.Pin104=VP_SYS_VS_tim1
-Mcu.Pin105=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
+Mcu.Pin101=VP_DMA2D_VS_DMA2D
+Mcu.Pin102=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin103=VP_RTC_VS_RTC_Activate
+Mcu.Pin104=VP_RTC_VS_RTC_Calendar
+Mcu.Pin105=VP_SYS_VS_tim1
+Mcu.Pin106=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
 Mcu.Pin11=PF9
 Mcu.Pin12=PF10
 Mcu.Pin13=PH0/OSC_IN
@@ -124,18 +178,21 @@ Mcu.Pin96=PB6
 Mcu.Pin97=PB8
 Mcu.Pin98=PB9
 Mcu.Pin99=PE0
-Mcu.PinsNb=106
+Mcu.PinsNb=107
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
 MxCube.Version=6.3.0
 MxDb.Version=DB.6.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA2D_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
+NVIC.DMA2_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.LTDC_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.OTG_HS_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
@@ -172,6 +229,7 @@ PA11.GPIO_Mode=GPIO_MODE_AF_PP
 PA11.GPIO_PuPd=GPIO_NOPULL
 PA11.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA11.Locked=true
+PA11.Mode=RGB565
 PA11.Signal=LTDC_R4
 PA12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA12.GPIO_Label=R5
@@ -179,6 +237,7 @@ PA12.GPIO_Mode=GPIO_MODE_AF_PP
 PA12.GPIO_PuPd=GPIO_NOPULL
 PA12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA12.Locked=true
+PA12.Mode=RGB565
 PA12.Signal=LTDC_R5
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=SWDIO
@@ -208,6 +267,7 @@ PA3.GPIO_Mode=GPIO_MODE_AF_PP
 PA3.GPIO_PuPd=GPIO_NOPULL
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA3.Locked=true
+PA3.Mode=RGB565
 PA3.Signal=LTDC_B5
 PA4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA4.GPIO_Label=VSYNC
@@ -215,6 +275,7 @@ PA4.GPIO_Mode=GPIO_MODE_AF_PP
 PA4.GPIO_PuPd=GPIO_NOPULL
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA4.Locked=true
+PA4.Mode=RGB565
 PA4.Signal=LTDC_VSYNC
 PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA6.GPIO_Label=G2
@@ -222,6 +283,7 @@ PA6.GPIO_Mode=GPIO_MODE_AF_PP
 PA6.GPIO_PuPd=GPIO_NOPULL
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA6.Locked=true
+PA6.Mode=RGB565
 PA6.Signal=LTDC_G2
 PA7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA7.GPIO_Label=ACP_RST
@@ -247,6 +309,7 @@ PB0.GPIO_Mode=GPIO_MODE_AF_PP
 PB0.GPIO_PuPd=GPIO_NOPULL
 PB0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB0.Locked=true
+PB0.Mode=RGB565
 PB0.Signal=LTDC_R3
 PB1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB1.GPIO_Label=R6
@@ -254,6 +317,7 @@ PB1.GPIO_Mode=GPIO_MODE_AF_PP
 PB1.GPIO_PuPd=GPIO_NOPULL
 PB1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB1.Locked=true
+PB1.Mode=RGB565
 PB1.Signal=LTDC_R6
 PB10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB10.GPIO_Label=G4
@@ -261,6 +325,7 @@ PB10.GPIO_Mode=GPIO_MODE_AF_PP
 PB10.GPIO_PuPd=GPIO_NOPULL
 PB10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB10.Locked=true
+PB10.Mode=RGB565
 PB10.Signal=LTDC_G4
 PB11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB11.GPIO_Label=G5
@@ -268,6 +333,7 @@ PB11.GPIO_Mode=GPIO_MODE_AF_PP
 PB11.GPIO_PuPd=GPIO_NOPULL
 PB11.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB11.Locked=true
+PB11.Mode=RGB565
 PB11.Signal=LTDC_G5
 PB12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB12.GPIO_Label=OTG_HS_ID
@@ -313,6 +379,7 @@ PB5.GPIO_Mode=GPIO_MODE_AF_PP
 PB5.GPIO_PuPd=GPIO_NOPULL
 PB5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB5.Locked=true
+PB5.Mode=SdramChipSelect2_1
 PB5.Signal=FMC_SDCKE1
 PB6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB6.GPIO_Label=SDNE1 [SDRAM_CS]
@@ -320,6 +387,7 @@ PB6.GPIO_Mode=GPIO_MODE_AF_PP
 PB6.GPIO_PuPd=GPIO_NOPULL
 PB6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB6.Locked=true
+PB6.Mode=SdramChipSelect2_1
 PB6.Signal=FMC_SDNE1
 PB8.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB8.GPIO_Label=B6
@@ -327,6 +395,7 @@ PB8.GPIO_Mode=GPIO_MODE_AF_PP
 PB8.GPIO_PuPd=GPIO_NOPULL
 PB8.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB8.Locked=true
+PB8.Mode=RGB565
 PB8.Signal=LTDC_B6
 PB9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB9.GPIO_Label=B7
@@ -334,6 +403,7 @@ PB9.GPIO_Mode=GPIO_MODE_AF_PP
 PB9.GPIO_PuPd=GPIO_NOPULL
 PB9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB9.Locked=true
+PB9.Mode=RGB565
 PB9.Signal=LTDC_B7
 PC0.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC0.GPIO_Label=SDNWE
@@ -398,6 +468,7 @@ PC6.GPIO_Mode=GPIO_MODE_AF_PP
 PC6.GPIO_PuPd=GPIO_NOPULL
 PC6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC6.Locked=true
+PC6.Mode=RGB565
 PC6.Signal=LTDC_HSYNC
 PC7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC7.GPIO_Label=G6
@@ -405,6 +476,7 @@ PC7.GPIO_Mode=GPIO_MODE_AF_PP
 PC7.GPIO_PuPd=GPIO_NOPULL
 PC7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC7.Locked=true
+PC7.Mode=RGB565
 PC7.Signal=LTDC_G6
 PC8.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC8.GPIO_Label=Si4684x_Interrupt
@@ -484,6 +556,7 @@ PD3.GPIO_Mode=GPIO_MODE_AF_PP
 PD3.GPIO_PuPd=GPIO_NOPULL
 PD3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD3.Locked=true
+PD3.Mode=RGB565
 PD3.Signal=LTDC_G7
 PD4.GPIOParameters=PinState,GPIO_Label
 PD4.GPIO_Label=SPI_CS
@@ -608,6 +681,7 @@ PF10.GPIO_Mode=GPIO_MODE_AF_PP
 PF10.GPIO_PuPd=GPIO_NOPULL
 PF10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PF10.Locked=true
+PF10.Mode=RGB565
 PF10.Signal=LTDC_DE
 PF11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PF11.GPIO_Label=SDNRAS
@@ -721,6 +795,7 @@ PG10.GPIO_Mode=GPIO_MODE_AF_PP
 PG10.GPIO_PuPd=GPIO_NOPULL
 PG10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PG10.Locked=true
+PG10.Mode=RGB565
 PG10.Signal=LTDC_G3
 PG11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PG11.GPIO_Label=B3
@@ -728,6 +803,7 @@ PG11.GPIO_Mode=GPIO_MODE_AF_PP
 PG11.GPIO_PuPd=GPIO_NOPULL
 PG11.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PG11.Locked=true
+PG11.Mode=RGB565
 PG11.Signal=LTDC_B3
 PG12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PG12.GPIO_Label=B4
@@ -735,6 +811,7 @@ PG12.GPIO_Mode=GPIO_MODE_AF_PP
 PG12.GPIO_PuPd=GPIO_NOPULL
 PG12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PG12.Locked=true
+PG12.Mode=RGB565
 PG12.Signal=LTDC_B4
 PG13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PG13.GPIO_Label=LD3 [Green Led]
@@ -781,6 +858,7 @@ PG6.GPIO_Mode=GPIO_MODE_AF_PP
 PG6.GPIO_PuPd=GPIO_NOPULL
 PG6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PG6.Locked=true
+PG6.Mode=RGB565
 PG6.Signal=LTDC_R7
 PG7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PG7.GPIO_Label=DOTCLK [LCT-RGB_DOTCLK]
@@ -788,6 +866,7 @@ PG7.GPIO_Mode=GPIO_MODE_AF_PP
 PG7.GPIO_PuPd=GPIO_NOPULL
 PG7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PG7.Locked=true
+PG7.Mode=RGB565
 PG7.Signal=LTDC_CLK
 PG8.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PG8.GPIO_Label=SDCLK
@@ -834,7 +913,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI3_Init-SPI3-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_SPI5_Init-SPI5-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI3_Init-SPI3-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_DMA_Init-DMA-false-HAL-true,7-MX_SPI5_Init-SPI5-false-HAL-true,8-MX_DMA2D_Init-DMA2D-false-HAL-true,9-MX_LTDC_Init-LTDC-false-HAL-true,10-MX_FMC_Init-FMC-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -850,102 +929,105 @@ RCC.FamilyName=M
 RCC.HCLKFreq_Value=168000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
-RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
-RCC.LCDTFTFreq_Value=24500000
+RCC.I2SClocksFreq_Value=96000000
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSAIDivR,PLLSAIN,PLLSAIR,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
+RCC.LCDTFTFreq_Value=6000000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=168000000
 RCC.PLLCLKFreq_Value=168000000
-RCC.PLLM=4
-RCC.PLLN=168
+RCC.PLLM=8
+RCC.PLLN=336
 RCC.PLLQ=7
 RCC.PLLQCLKFreq_Value=48000000
+RCC.PLLSAIDivR=RCC_PLLSAIDIVR_8
+RCC.PLLSAIN=192
+RCC.PLLSAIR=4
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
-RCC.SAI_AClocksFreq_Value=24500000
-RCC.SAI_BClocksFreq_Value=24500000
+RCC.SAI_AClocksFreq_Value=48000000
+RCC.SAI_BClocksFreq_Value=48000000
 RCC.SYSCLKFreq_VALUE=168000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.VCOI2SOutputFreq_Value=384000000
-RCC.VCOInputFreq_Value=2000000
+RCC.VCOI2SOutputFreq_Value=192000000
+RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=336000000
-RCC.VCOSAIOutputFreq_Value=98000000
-RCC.VCOSAIOutputFreq_ValueQ=24500000
-RCC.VCOSAIOutputFreq_ValueR=49000000
-RCC.VcooutputI2S=192000000
-RCC.VcooutputI2SQ=192000000
-SH.FMC_A0.0=FMC_A0
+RCC.VCOSAIOutputFreq_Value=192000000
+RCC.VCOSAIOutputFreq_ValueQ=48000000
+RCC.VCOSAIOutputFreq_ValueR=48000000
+RCC.VcooutputI2S=96000000
+RCC.VcooutputI2SQ=96000000
+SH.FMC_A0.0=FMC_A0,12b-sda1
 SH.FMC_A0.ConfNb=1
-SH.FMC_A1.0=FMC_A1
+SH.FMC_A1.0=FMC_A1,12b-sda1
 SH.FMC_A1.ConfNb=1
-SH.FMC_A10.0=FMC_A10
+SH.FMC_A10.0=FMC_A10,12b-sda1
 SH.FMC_A10.ConfNb=1
-SH.FMC_A11.0=FMC_A11
+SH.FMC_A11.0=FMC_A11,12b-sda1
 SH.FMC_A11.ConfNb=1
-SH.FMC_A14_BA0.0=FMC_BA0
+SH.FMC_A14_BA0.0=FMC_BA0,FourSdramBanks1
 SH.FMC_A14_BA0.ConfNb=1
-SH.FMC_A15_BA1.0=FMC_BA1
+SH.FMC_A15_BA1.0=FMC_BA1,FourSdramBanks1
 SH.FMC_A15_BA1.ConfNb=1
-SH.FMC_A2.0=FMC_A2
+SH.FMC_A2.0=FMC_A2,12b-sda1
 SH.FMC_A2.ConfNb=1
-SH.FMC_A3.0=FMC_A3
+SH.FMC_A3.0=FMC_A3,12b-sda1
 SH.FMC_A3.ConfNb=1
-SH.FMC_A4.0=FMC_A4
+SH.FMC_A4.0=FMC_A4,12b-sda1
 SH.FMC_A4.ConfNb=1
-SH.FMC_A5.0=FMC_A5
+SH.FMC_A5.0=FMC_A5,12b-sda1
 SH.FMC_A5.ConfNb=1
-SH.FMC_A6.0=FMC_A6
+SH.FMC_A6.0=FMC_A6,12b-sda1
 SH.FMC_A6.ConfNb=1
-SH.FMC_A7.0=FMC_A7
+SH.FMC_A7.0=FMC_A7,12b-sda1
 SH.FMC_A7.ConfNb=1
-SH.FMC_A8.0=FMC_A8
+SH.FMC_A8.0=FMC_A8,12b-sda1
 SH.FMC_A8.ConfNb=1
-SH.FMC_A9.0=FMC_A9
+SH.FMC_A9.0=FMC_A9,12b-sda1
 SH.FMC_A9.ConfNb=1
-SH.FMC_D0_DA0.0=FMC_D0
+SH.FMC_D0_DA0.0=FMC_D0,sd-16b-d1
 SH.FMC_D0_DA0.ConfNb=1
-SH.FMC_D10_DA10.0=FMC_D10
+SH.FMC_D10_DA10.0=FMC_D10,sd-16b-d1
 SH.FMC_D10_DA10.ConfNb=1
-SH.FMC_D11_DA11.0=FMC_D11
+SH.FMC_D11_DA11.0=FMC_D11,sd-16b-d1
 SH.FMC_D11_DA11.ConfNb=1
-SH.FMC_D12_DA12.0=FMC_D12
+SH.FMC_D12_DA12.0=FMC_D12,sd-16b-d1
 SH.FMC_D12_DA12.ConfNb=1
-SH.FMC_D13_DA13.0=FMC_D13
+SH.FMC_D13_DA13.0=FMC_D13,sd-16b-d1
 SH.FMC_D13_DA13.ConfNb=1
-SH.FMC_D14_DA14.0=FMC_D14
+SH.FMC_D14_DA14.0=FMC_D14,sd-16b-d1
 SH.FMC_D14_DA14.ConfNb=1
-SH.FMC_D15_DA15.0=FMC_D15
+SH.FMC_D15_DA15.0=FMC_D15,sd-16b-d1
 SH.FMC_D15_DA15.ConfNb=1
-SH.FMC_D1_DA1.0=FMC_D1
+SH.FMC_D1_DA1.0=FMC_D1,sd-16b-d1
 SH.FMC_D1_DA1.ConfNb=1
-SH.FMC_D2_DA2.0=FMC_D2
+SH.FMC_D2_DA2.0=FMC_D2,sd-16b-d1
 SH.FMC_D2_DA2.ConfNb=1
-SH.FMC_D3_DA3.0=FMC_D3
+SH.FMC_D3_DA3.0=FMC_D3,sd-16b-d1
 SH.FMC_D3_DA3.ConfNb=1
-SH.FMC_D4_DA4.0=FMC_D4
+SH.FMC_D4_DA4.0=FMC_D4,sd-16b-d1
 SH.FMC_D4_DA4.ConfNb=1
-SH.FMC_D5_DA5.0=FMC_D5
+SH.FMC_D5_DA5.0=FMC_D5,sd-16b-d1
 SH.FMC_D5_DA5.ConfNb=1
-SH.FMC_D6_DA6.0=FMC_D6
+SH.FMC_D6_DA6.0=FMC_D6,sd-16b-d1
 SH.FMC_D6_DA6.ConfNb=1
-SH.FMC_D7_DA7.0=FMC_D7
+SH.FMC_D7_DA7.0=FMC_D7,sd-16b-d1
 SH.FMC_D7_DA7.ConfNb=1
-SH.FMC_D8_DA8.0=FMC_D8
+SH.FMC_D8_DA8.0=FMC_D8,sd-16b-d1
 SH.FMC_D8_DA8.ConfNb=1
-SH.FMC_D9_DA9.0=FMC_D9
+SH.FMC_D9_DA9.0=FMC_D9,sd-16b-d1
 SH.FMC_D9_DA9.ConfNb=1
-SH.FMC_NBL0.0=FMC_NBL0
+SH.FMC_NBL0.0=FMC_NBL0,Sd2ByteEnable1
 SH.FMC_NBL0.ConfNb=1
-SH.FMC_NBL1.0=FMC_NBL1
+SH.FMC_NBL1.0=FMC_NBL1,Sd2ByteEnable1
 SH.FMC_NBL1.ConfNb=1
-SH.FMC_SDCLK.0=FMC_SDCLK
+SH.FMC_SDCLK.0=FMC_SDCLK,12b-sda1
 SH.FMC_SDCLK.ConfNb=1
-SH.FMC_SDNCAS.0=FMC_SDNCAS
+SH.FMC_SDNCAS.0=FMC_SDNCAS,12b-sda1
 SH.FMC_SDNCAS.ConfNb=1
-SH.FMC_SDNRAS.0=FMC_SDNRAS
+SH.FMC_SDNRAS.0=FMC_SDNRAS,12b-sda1
 SH.FMC_SDNRAS.ConfNb=1
-SH.FMC_SDNWE.0=FMC_SDNWE
+SH.FMC_SDNWE.0=FMC_SDNWE,12b-sda1
 SH.FMC_SDNWE.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
@@ -965,8 +1047,8 @@ SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
-SPI5.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
-SPI5.CalculateBaudRate=10.5 MBits/s
+SPI5.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+SPI5.CalculateBaudRate=5.25 MBits/s
 SPI5.Direction=SPI_DIRECTION_2LINES
 SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI5.Mode=SPI_MODE_MASTER
@@ -977,6 +1059,8 @@ USB_DEVICE.VirtualMode-CDC_HS=Cdc
 USB_DEVICE.VirtualModeHS=Cdc_HS
 USB_OTG_HS.IPParameters=VirtualMode-Device_Only_FS
 USB_OTG_HS.VirtualMode-Device_Only_FS=Device_Only_FS
+VP_DMA2D_VS_DMA2D.Mode=DMA2D_Activate
+VP_DMA2D_VS_DMA2D.Signal=DMA2D_VS_DMA2D
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
